using weather api

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,19 @@
   color: white;
   font-weight: 700;
 }
+.weatherResultBox{
+  margin: auto;
+  width: 500px;
+  height: 300px;
+}
+.weatherIcon{
+  margin-top: 2rem;
+  width: 100px;
+  height: 100px;
+}
+.weatherCity{
+  font-size: 35px;
+}
+.weatherTemp{
+  font-size: 45px;
+}
